--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
     <div class="content">
         日期
     </div>
-    <img class="second" src="img/5b2dad46ad.jpg" alt="">
+    <img class="second" src="./assets/img/8559387.jpg" alt="">
     <span class="iconfont icon-icon-"></span>
     <span class="iconfont icon-icon-1"></span>
     <span class="iconfont icon-icon-2"></span>
     <span class="iconfont icon-icon-3"></span>
-<script type="text/javascript" src="app.js"></script></body>
+</body>
 </html>
