--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,13 @@
     <span class="iconfont icon-icon-1"></span>
     <span class="iconfont icon-icon-2"></span>
     <span class="iconfont icon-icon-3"></span>
+    <div class="box">
+        <span class="test">hello world</span>
+    </div>
 </body>
 </html>
+<style>
+    .test{
+        backface-visibility:hidden
+    }
+</style>
