--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,13 @@
     <span class="iconfont icon-icon-2"></span>
     <span class="iconfont icon-icon-3"></span>
     <div class="box">
-        <span class="test">hello world</span>
+        <span class="test">hello vue 111</span>
     </div>
 </body>
 </html>
 <style>
     .test{
+        color: red;
         backface-visibility:hidden
     }
 </style>
